# RAGstar

./: .dockerignore  .gitignore  Caddyfile  DOCKERFILE_OPTIMIZATION.md  Dockerfile  README.md  build_index.py  cleaner.py  config.py  docker-compose.yml  ingest.py  pyproject.toml  query.py  ragstar.yaml  summarizer.py  viewer.py
.github/: copilot-instructions.md
.github/workflows/: gcp-build-push.yml
deploy/gke/: deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
scripts/: gke-build-push.sh  gke-deploy.sh
src/ragstar/: __init__.py  api.py  cli.py  config.py  index.py  ollama.py  search.py  summarizer.py  viewer.py
