[project]
name = "ragstar"
version = "0.2.0"
description = "Repository discovery via vector search"
readme = "README.md"
# Python 3.12.x required for CUDA compatibility with torch 2.4.1.
# The tight version pin ensures reproducible builds with the specific
# CUDA-enabled torch wheel. Update carefully when newer versions are tested.
requires-python = ">=3.12,<3.13"
dependencies = [
    "gitingest>=0.3.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    # torch 2.4.1 pinned for CUDA 12.1 compatibility
    "torch==2.4.1",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
