[project]
name = "ragstar"
version = "0.2.0"
description = "Repository discovery via vector search"
readme = "README.md"
# Python 3.12.x required for compatibility with dependencies.
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=0.4.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
